# Vacancy

./: CMakeLists.txt
Client/: CMakeLists.txt
Client/include/: Client.h
Client/src/: Client.cpp  Main.cpp
Server/: CMakeLists.txt
Server/include/: Server.h
Server/src/: Main.cpp  Server.cpp
